spelling corrections and dockerfile update

--- a/src/Api/DeviceManagement.Api.csproj
+++ b/src/Api/DeviceManagement.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>82eac588-6f09-4775-b987-0dacef4b1145</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<DockerfileFile>..\..\Dockerfile</DockerfileFile>
   </PropertyGroup>
 
   <ItemGroup>
