--- a/src/Api/Properties/launchSettings.json
+++ b/src/Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "DeviceManagment.Api": {
+    "DeviceManagement.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
