Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,4 +66,4 @@ stages:
         containerRegistry: 'meshtmscontainerregistry'
         repository: 'devicemanagement'
         command: 'buildAndPush'
-        Dockerfile: '$(projectPath)/Dockerfile'
+        Dockerfile: '**/Dockerfile'
