--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,11 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
+  NUGET_PACKAGES: $(Pipeline.Workspace)/.nuget/packages
+
 stages:
-- stage: DotNetBuild
-  displayName: Build image
+- stage: ProjectBuild
+  displayName: Build Image
   jobs:
   - job: Build
     displayName: Build
@@ -32,37 +34,49 @@ stages:
       inputs:
         version: '6.0.x'
     - task: NuGetToolInstaller@1
-      displayName: 'NuGet Install'
+      displayName: 'Install NuGet Tool'
+    - task: Cache@2
+      displayName: NuGet Cache
+      inputs:
+        key: 'nuget | "$(Agent.OS)" | **/packages.lock.json,!**/bin/**,!**/obj/**'
+        restoreKeys: |
+           nuget | "$(Agent.OS)"
+           nuget
+        path: '$(NUGET_PACKAGES)'
+        cacheHitVar: 'CACHE_RESTORED'
     - task: NuGetCommand@2
+      displayName: 'NuGet Restore'
+      condition: ne(variables.CACHE_RESTORED, true)
       inputs:
         command: 'restore'
         restoreSolution: '$(solution)'
-      displayName: 'dotnet Restore'
     - task: DotNetCoreCLI@2
+      displayName: 'Build Project'
       inputs:
         command: build
         projects: '$(project)'
         arguments: '-c $(buildConfiguration)'
-      displayName: 'Build API Project'
     - task: DotNetCoreCLI@2
+      displayName: 'Run Tests'
       inputs:
         command: test
         publishTestResults: true
         projects: '$(tests)'
-      displayName: 'Run Tests'
     - task: DotNetCoreCLI@2
+      displayName: Publish Project
       inputs:
         command: 'publish'
         publishWebProjects: true
         arguments: '-o $(Build.ArtifactStagingDirectory)'
         zipAfterPublish: false
     - task: PublishBuildArtifacts@1
+      displayName: Publish Artifacts
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: '$(buildConfiguration)'
         publishLocation: 'Container'
 - stage: DockerBuild
-  displayName: Build docker image
+  displayName: Build Docker Image
   jobs:
   - job: Build
     displayName: Build
