--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,14 +29,12 @@ stages:
     pool:
       vmImage: windows-latest
     steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET Core 6 sdk'
-      inputs:
-        version: '6.0.x'
-    - task: CmdLine@2
-      displayName: List Tools
-      inputs:
-        script: dir
+    # - task: UseDotNet@2
+    #   displayName: 'Use .NET Core 6 sdk'
+    #   inputs:
+    #     version: '6.0.x'
+      - script: cd ..
+      - script: dir
 #     - task: NuGetToolInstaller@1
 #       displayName: 'Install NuGet Tool'
 #     - task: Cache@2
