--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
     #   displayName: 'Use .NET Core 6 sdk'
     #   inputs:
     #     version: '6.0.x'
-      - script: cd ..
+      - script: echo $(Agent.ToolsDirectory)/dotnet
       - script: dotnet --info
 #     - task: NuGetToolInstaller@1
 #       displayName: 'Install NuGet Tool'
