--- a/src/Data/src/DeviceManagement.Data.csproj
+++ b/src/Data/src/DeviceManagement.Data.csproj
@@ -16,8 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Shared\Data\Company.Data.csproj" />
-		<ProjectReference Include="..\Domain\DeviceManagement.Domain.csproj" />
+		<ProjectReference Include="..\..\Shared\Data\Company.Data.csproj" />
+		<ProjectReference Include="..\..\Domain\src\DeviceManagement.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
