--- a/src/Domain/src/DeviceManagement.Domain.csproj
+++ b/src/Domain/src/DeviceManagement.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Domain\Company.Domain.csproj" />
+    <ProjectReference Include="..\..\Shared\Domain\Company.Domain.csproj" />
   </ItemGroup>
 
 </Project>
