--- a/src/Infrastructure/src/DeviceManagement.Infrastructure.csproj
+++ b/src/Infrastructure/src/DeviceManagement.Infrastructure.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\DeviceManagement.Domain.csproj" />
+    <ProjectReference Include="..\..\Domain\src\DeviceManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
